--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha9'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    // ffmpeg
+    compile 'cn.dxjia:ffmpegexecutor:0.1.7'
 }
