--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     // alternatively, just LiveData
     implementation 'android.arch.lifecycle:livedata:1.1.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    testAnnotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     // Room (use 1.1.0-alpha2 for latest alpha)
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    testAnnotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     // Paging
     implementation 'android.arch.paging:runtime:1.0.0-alpha5'
 }
